--- a/presentation/src/main/res/layout/fragment_second.xml
+++ b/presentation/src/main/res/layout/fragment_second.xml
@@ -28,7 +28,7 @@
         android:id="@+id/false_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/false"
+        android:text="@string/generic_false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
