Removal of SecondFragment, renaming FirstFragment to QuestionFragment

--- a/presentation/src/main/res/navigation/nav_graph.xml
+++ b/presentation/src/main/res/navigation/nav_graph.xml
@@ -7,22 +7,8 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.martgant.tolkienquizapp.FirstFragment"
+        android:name="com.martgant.tolkienquizapp.QuestionFragment"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
-
-        <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.martgant.tolkienquizapp.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+        tools:layout="@layout/fragment_question">
     </fragment>
 </navigation>
