--- a/presentation/src/main/res/layout/fragment_question.xml
+++ b/presentation/src/main/res/layout/fragment_question.xml
@@ -7,28 +7,44 @@
     tools:context=".QuestionFragment">
 
     <TextView
-        android:id="@+id/textview_first"
-        android:layout_width="wrap_content"
+        android:id="@+id/question_description"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/question_text"
+        android:layout_marginHorizontal="16dp"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@id/chain_breaker"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/question_1" />
+
+    <View
+        android:id="@+id/chain_breaker"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:layout_constraintBottom_toTopOf="@id/answer_1" />
 
     <Button
+        android:id="@+id/answer_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/next"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/answer_2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview_first" />
+        app:layout_constraintTop_toBottomOf="@id/question_description"
+        tools:text="@string/question_1_answer_correct" />
+
     <Button
+        android:id="@+id/answer_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/generic_true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview_first" />
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/answer_1"
+        tools:text="@string/question_1_answer_incorrect_1" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
