--- a/presentation/src/main/res/navigation/nav_graph.xml
+++ b/presentation/src/main/res/navigation/nav_graph.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/QuestionFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
+        android:id="@+id/QuestionFragment"
         android:name="com.martgant.tolkienquizapp.QuestionFragment"
-        android:label="@string/first_fragment_label"
+        android:label="@string/question_fragment_label"
         tools:layout="@layout/fragment_question">
     </fragment>
 </navigation>
