--- a/presentation/src/main/res/layout/fragment_question.xml
+++ b/presentation/src/main/res/layout/fragment_question.xml
@@ -46,6 +46,18 @@
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/answer_1"
         tools:text="@string/question_1_answer_incorrect_1" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/data_recycler"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        tools:ignore="NotSibling" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
